--- a/package.json
+++ b/package.json
@@ -15,8 +15,28 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@fontsource/mr-de-haviland": "^4.5.0",
+    "@fontsource/roboto": "^4.5.1",
+    "@fontsource/roboto-condensed": "^4.5.0",
+    "@fontsource/unna": "^4.5.0",
+    "@mui/icons-material": "^5.2.5",
+    "@mui/material": "^5.2.6",
+    "formik": "^2.2.9",
     "gatsby": "^4.4.0",
+    "gatsby-plugin-image": "^2.4.0",
+    "gatsby-plugin-manifest": "^4.4.0",
+    "gatsby-plugin-react-helmet": "^5.4.0",
+    "gatsby-plugin-react-svg": "^3.1.0",
+    "gatsby-plugin-sharp": "^4.4.0",
+    "gatsby-plugin-sitemap": "^5.4.0",
+    "gatsby-source-filesystem": "^4.4.0",
+    "gatsby-transformer-sharp": "^4.4.0",
+    "prop-types": "^15.8.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "yup": "^0.32.11"
   }
 }
